src/test/resources/public/input/typechecking/fail/my_test_cases/my_fail45.jova
class Test{

}
class Main {

  public int main() {
    Test test;

    return test;
  }

}